includes subj/obj cp estimation